tests/character_class_invalid_utf_sequence_diag_2/expected_err.txt
grammar.peg:1:12: error: This UTF sequence is invalid.
 1 | Root <- [a-�]
   |            ~
